[tool.poetry]
name = "mypyc"
version = "0.1.0"
description = ""
authors = ["Adam Veres <contact@adamveres.com>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^18.2"
flake8 = "^3.6"
flake8-bugbear = "^18.8"
flake8-pyi = "^18.3"
lxml = "^4.2"
mypy_extensions = "^0.4.1"
psutil = "^5.4"
pytest = "^4.0"
pytest-xdist = "^1.24"
pytest-cov = "^2.6"
typed-ast = "^1.1"
typing = "^3.6"
py = "^1.7"
mypy = {path = "external/mypy"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
